added MEN’S FASHION

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <!-- google fonts end -->
+ <!-- font-awsome start -->
 <!-- style start -->
 <style>
     .font-poppins{
@@ -75,7 +76,6 @@
 <!-- banner start -->
 <section class=" gap-20 lg:mb-20 md:mb-10 mb-5" style="background-image: url(./img/1\ 1.png); background-repeat: no-repeat; ">
 
-
 <div class="flex justify-end lg:mr-20 md:mr-10 mr-5">
 <div class="lg:pt-96 md:pt-52 pt-28 lg:pb-24 md:pb-14 pb-8 ">
     <h5 class="text-[#22262A] font-poppins lg:text-lg md:text-base text-sm font-medium lg:mb-3  md:mb-2 mb-1">NEW TREND</h5>
@@ -90,7 +90,8 @@
 
 
 <!-- WOMEN’S FASHION start -->
-<section>
+
+<section class="lg:mb-20 md:mb-10 mb-5">
  
 <div class="text-center lg:mb-10 md:mb-6 mb-4">
     <h3 class="text-[#22262A] font-poppins lg:text-xl md:text-lg text-base font-bold lg:mb-3 md:mb-2 mb-1">WOMEN’S FASHION</h3>
@@ -108,7 +109,6 @@
     </div>
 </div>
 
-
 <div>
     <img src="./img/9.png" alt="" class="lg:mb-4 md:mb-3 mb-2">
     <p class="text-[#22262A] font-poppins md:text-base text-sm font-light mb-1">IGURE</p>
@@ -119,9 +119,6 @@
     </div>
 </div>
 
-
-
-
 <div>
     <img src="./img/6.png" alt="" class="lg:mb-4 md:mb-3 mb-2">
     <p class="text-[#22262A] font-poppins md:text-base text-sm font-light mb-1">IGURE</p>
@@ -131,9 +128,6 @@
     <p class="text-[#CF2929] font-poppins md:text-base text-sm font-normal ">$129.00</p>
     </div>
 </div>
-
-
-
 
 <div>
     <img src="./img/7.png" alt="" class="lg:mb-4 md:mb-3 mb-2">
@@ -147,6 +141,85 @@
 
 </div>
 </section>
+<!-- WOMEN’S FASHION end -->
+
+<!-- MEN’S FASHION start -->
+
+
+
+<section class="lg:mb-20 md:mb-10 mb-5">
+ 
+<div class="text-center lg:mb-10 md:mb-6 mb-4">
+    <h3 class="text-[#22262A] font-poppins lg:text-xl md:text-lg text-base font-bold lg:mb-3 md:mb-2 mb-1">MEN’S FASHION</h3>
+    <p class="text-[#22262A] md:text-base text-sm font-poppins font-normal">Shop our new arrivals from established brands</p>
+</div>
+
+<div class="flex justify-center lg:flex-row flex-wrap gap-8">
+<div>
+    <img src="./img/13.png" alt="" class="lg:mb-4 md:mb-3 mb-2">
+    <p class="text-[#22262A] font-poppins md:text-base text-sm font-light mb-1">IGURE</p>
+    <h4 class="text-[#22262A] md:text-base sm font-poppins font-semibold mb-1">GREEN MUSCLE FIT POLO SHIRT</h4>
+    <div class="flex gap-10">
+    <p class="text-[#22262A] font-poppins md:text-base text-sm font-normal ">$229.00</p>
+    <p class="text-[#CF2929] font-poppins md:text-base text-sm font-normal ">$129.00</p>
+    </div>
+</div>
+
+<div>
+    <img src="./img/11.png" alt="" class="lg:mb-4 md:mb-3 mb-2">
+    <p class="text-[#22262A] font-poppins md:text-base text-sm font-light mb-1">IGURE</p>
+    <h4 class="text-[#22262A] md:text-base sm font-poppins font-semibold mb-1">GREEN MUSCLE FIT POLO SHIRT</h4>
+    <div class="flex gap-10">
+    <p class="text-[#22262A] font-poppins md:text-base text-sm font-normal ">$229.00</p>
+    <p class="text-[#CF2929] font-poppins md:text-base text-sm font-normal ">$129.00</p>
+    </div>
+</div>
+
+<div>
+    <img src="./img/10.png" alt="" class="lg:mb-4 md:mb-3 mb-2">
+    <p class="text-[#22262A] font-poppins md:text-base text-sm font-light mb-1">IGURE</p>
+    <h4 class="text-[#22262A] md:text-base sm font-poppins font-semibold mb-1">GREEN MUSCLE FIT POLO SHIRT</h4>
+    <div class="flex gap-10">
+    <p class="text-[#22262A] font-poppins md:text-base text-sm font-normal ">$229.00</p>
+    <p class="text-[#CF2929] font-poppins md:text-base text-sm font-normal ">$129.00</p>
+    </div>
+</div>
+
+<div>
+    <img src="./img/12.png" alt="" class="lg:mb-4 md:mb-3 mb-2">
+    <p class="text-[#22262A] font-poppins md:text-base text-sm font-light mb-1">IGURE</p>
+    <h4 class="text-[#22262A] md:text-base sm font-poppins font-semibold mb-1">GREEN MUSCLE FIT POLO SHIRT</h4>
+    <div class="flex gap-10">
+    <p class="text-[#22262A] font-poppins md:text-base text-sm font-normal ">$229.00</p>
+    <p class="text-[#CF2929] font-poppins md:text-base text-sm font-normal ">$129.00</p>
+    </div>
+</div>
+
+</div>
+</section>
+
+
+
+<!-- MEN’S FASHION end -->
+
+
+
+
+<section class="" style="background-image:url(./img/17\ 1.png); background-repeat: no-repeat;">
+
+<div class="">
+<div class="lg:pt-96 md:pt-52 pt-28 lg:pb-24 md:pb-14 pb-8 ">
+    <h5 class="text-[#22262A] font-poppins lg:text-lg md:text-base text-sm font-medium lg:mb-3  md:mb-2 mb-1">NEW TREND</h5>
+    <h2 class="text-[#22262A] font-bold lg:text-6xl md:text-4xl text-3xl font-poppins lg:mb-3  md:mb-2 mb-1 ">COLLUSION</h2>
+    <p class="text-[#22262A] font-poppins lg:text-lg md:text-base text-sm font-medium lg:mb-3  md:mb-2 mb-1">An exclusive selection of this season's trends.</p>
+        <a class="bg-[#22262A] cursor-pointer text-[#FFF] font-poppins font-medium lg:text-lg md:base text-sm py-1 px-2">DISCOVER</a>
+        <a class="bg-[#22262A] cursor-pointer text-[#FFF] font-poppins font-medium lg:text-lg md:base text-sm py-1 px-2">SHOP NOW</a>
+</div>
+</div>
+</section>
+
+
+
 
 
 
