--- a/index.html
+++ b/index.html
@@ -204,25 +204,77 @@
 
 
 
-
-<section class="" style="background-image:url(./img/17\ 1.png); background-repeat: no-repeat;">
+<!-- TACHEN 19 start -->
+<section class="lg:mb-20 md:mb-10 mb-5" style="background-image:url(./img/17\ 1.png); background-repeat:no-repeat;">
 
 <div class="">
 <div class="lg:pt-96 md:pt-52 pt-28 lg:pb-24 md:pb-14 pb-8 ">
-    <h5 class="text-[#22262A] font-poppins lg:text-lg md:text-base text-sm font-medium lg:mb-3  md:mb-2 mb-1">NEW TREND</h5>
-    <h2 class="text-[#22262A] font-bold lg:text-6xl md:text-4xl text-3xl font-poppins lg:mb-3  md:mb-2 mb-1 ">COLLUSION</h2>
-    <p class="text-[#22262A] font-poppins lg:text-lg md:text-base text-sm font-medium lg:mb-3  md:mb-2 mb-1">An exclusive selection of this season's trends.</p>
-        <a class="bg-[#22262A] cursor-pointer text-[#FFF] font-poppins font-medium lg:text-lg md:base text-sm py-1 px-2">DISCOVER</a>
-        <a class="bg-[#22262A] cursor-pointer text-[#FFF] font-poppins font-medium lg:text-lg md:base text-sm py-1 px-2">SHOP NOW</a>
+    <h5 class="text-[#22262A] font-poppins lg:text-lg md:text-base text-sm font-medium lg:mb-3  md:mb-2 mb-1">OWN THE DAY</h5>
+    <h2 class="text-[#22262A] font-bold lg:text-6xl md:text-4xl text-3xl font-poppins lg:mb-3  md:mb-2 mb-1 ">TACHEN 19</h2>
+
+        <a class="bg-[#22262A] cursor-pointer text-[#FFF] font-poppins font-medium lg:text-lg md:base text-sm py-1 px-2">SHOP COLLECTION</a>
+        
 </div>
 </div>
 </section>
+<!-- TACHEN 19 end -->
 
+<!-- footer start -->
 
-
-
-
-
+<footer class="footer bg-[#F2F8FC] text-base-content md:p-10 ">
+  <div class="">
+    <h3 class="text-[#22262A] font-poppins lg:text-2xl md:text-xl text-lg font-bold ">YOUR LOGO</h3>
+    <p class="text-[#22262A] md:text-base text-sm font-normal font-poppins">We earned a reputation of being good at what we do. <br>
+Let us take your online shop to new dimension in  <br>
+success!</p>
+<p class="text-[#22262A] md:text-base text-sm font-normal font-poppins">Comilla, Bangladesh 3500</p>
+<p class="text-[#22262A] md:text-base text-sm font-normal font-poppins">kawsarahmed0210@gmail.com</p>
+<p class="text-[#22262A] md:text-base text-sm font-normal font-poppins">01647470457</p>
+  </div>
+  
+  <form class="">
+    <h6 class=" text-[#22262A] font-poppins lg:text-2xl md:text-xl text-lg font-bold ">RECIVE EMAIL UPDATES</h6>
+    <fieldset class="form-control w-80 mb-8">
+      <div class="join">
+        <input
+          type="text"
+          placeholder="Your Email Address"
+          class="input input-bordered join-item cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins"/>
+        <button class="btn bg-white input-bordered join-item">JOIN</button>
+      </div>
+    </fieldset>
+   <div class="flex lg:flex-row flex-wrap gap-10">
+    <nav class="flex flex-col">
+    <h6 class=" mb-2 cursor-pointer text-[#22262A] lg:text-xl md:text-lg text-base font-poppins font-semibold">SHOP</h6>
+    <a class="mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Shop</a>
+    <a class="mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Collection</a>
+    <a class=" mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Outlet</a>
+    <a class=" mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Lookbook</a>
+  </nav>
+ 
+  <nav class="flex flex-col">
+    <h6 class=" mb-2 cursor-pointer text-[#22262A] lg:text-xl md:text-lg text-base font-poppins font-semibold">HELP</h6>
+    <a class="mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">FAQ</a>
+    <a class="mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Privecy Policy</a>
+    <a class=" mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Tearms and conditions</a>
+    <a class=" mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Return and Exchanges</a>
+  </nav>
+  <nav class="flex flex-col">
+    <h6 class=" mb-2 cursor-pointer text-[#22262A] lg:text-xl md:text-lg text-base font-poppins font-semibold">ABOUT</h6>
+    <a class="mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Journal</a>
+    <a class="mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Our Story</a>
+    <a class=" mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Contact</a>
+    <a class=" mb-2 cursor-pointer text-[#22262A] md:text-base text-sm font-normal font-poppins">Store Location</a>
+  </nav>
+</div>
+  </form>
+</footer>
+<footer class="footer footer-center bg-[#E7F5F8] text-base-content p-4">
+  <aside>
+    <p class="text-[#22262A] md:text-base text-sm font-normal font-poppins">Copyright © 2020 . Your company name  All rights reserved</p>
+  </aside>
+</footer>
+<!-- footer end -->
 
 
 </body>
