added boys and girls fashion

--- a/index.html
+++ b/index.html
@@ -88,6 +88,28 @@
 </section>
 <!-- banner end -->
 
+<!-- boys and girls fashion start -->
+ 
+<section class="lg:mb-20 md:mb-10 mb-5">
+    <div class="flex justify-center gap-8 lg:flex-row flex-col lg:ml-0 md:ml-28 mb-0">
+    <div>
+<div class="mb-6">
+    <img src="./img/2.png" alt="">
+</div>
+<div class="flex md:flex-row flex-col gap-7">
+    <img src="./img/3.png" alt="">
+    <img src="./img/4.png" alt="">
+</div>
+</div>
+
+<div>
+    <img src="./img/5.png" alt="">
+</div>
+
+</div>
+</section>
+<!-- boys and girls fashion end -->
+
 
 <!-- WOMEN’S FASHION start -->
 
